--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^2.3.0",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0"
   }
