--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "stripe": "^11.9.0"
   }
 }
