--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
@@ -26,6 +27,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
-    "stripe": "^11.9.0"
+    "stripe": "^11.9.0",
+    "uuid": "^9.0.0"
   }
 }
