--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "googleapis": "^114.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.3.0",
     "passport": "^0.6.0",
